--- a/README.Rmd
+++ b/README.Rmd
@@ -9,7 +9,7 @@ knitr::opts_chunk$set(
   collapse = TRUE,
   comment = "#>",
   fig.path = "man/figures/README-",
-  out.width = "100%"
+  out.width = "400px"
 )
 ```
 # H3-R
