--- a/README.Rmd
+++ b/README.Rmd
@@ -18,11 +18,11 @@ knitr::opts_chunk$set(
 [![Project Status: Active – The project has reached a stable, usable state and is being actively developed.](https://www.repostatus.org/badges/latest/active.svg)](https://www.repostatus.org/#active)
 [![H3 Version](https://img.shields.io/badge/h3-v3.3.0-blue.svg)](https://github.com/uber/h3/releases/tag/v3.3.0)
 
-Provides R bindungs to [H3](https://uber.github.io/h3/), a hexagonal hierarchical spatial indexing system.
+Provides R bindings for [H3](https://uber.github.io/h3/), a hexagonal hierarchical spatial indexing system.
 
 ## Notes
 
-Succesfully build on
+Succesfully built on
 
 * Linux
 * OSX
@@ -83,5 +83,5 @@ radius <- 1
 (neighbors <- k_ring(h3_index, radius))
 
 h3_to_geo_boundary_sf(neighbors) %>%
-  sf::st_geometry() %>% plot()
+  sf::st_geometry() %>% plot(col = "blue")
 ```
