--- a/README.Rmd
+++ b/README.Rmd
@@ -27,6 +27,8 @@ Succesfully built on
 * Linux
 * OSX
 
+If you cannot build the C library you might check [crazycapivara/h3forr](https://github.com/crazycapivara/h3forr) providing bindings via [V8](https://github.com/jeroen/V8) and [h3-js](https://github.com/uber/h3-js).
+
 ## Requirements
 
 First of all you need to build the [H3 C library](https://github.com/uber/h3) from source. Therefore, you need a C compiler, `cmake` and `make`.
