--- a/README.Rmd
+++ b/README.Rmd
@@ -20,6 +20,11 @@ knitr::opts_chunk$set(
 
 Provides R bindings for [H3](https://uber.github.io/h3/), a hexagonal hierarchical spatial indexing system.
 
+## Documentation
+
+* [H3-R](https://crazycapivara.github.io/h3-r/)
+* [H3](https://uber.github.io/h3/)
+
 ## Notes
 
 Succesfully built on
