--- a/README.Rmd
+++ b/README.Rmd
@@ -44,8 +44,10 @@ Then you can run:
 git clone https://github.com/crazycapivara/h3-r.git
 pushd h3-r
 chmod +x install-h3c.sh
+# Install H3 C Library
 ./install-h3c.sh
-# R -q -e 'devtools::install()'
+# Install H3 for R
+R -q -e 'devtools::install()'
 popd
 rm -rf h3-r
 ```
